tried to fix profile from being off center on hover

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -82,6 +82,7 @@ nav {
 
     .links-container {
         height: auto !important;
+        padding: 5px 15px;
     }
 
     .links {
